src/front/cobalt.css
/* ... */
.popup.scrollable {
    height: 85%;
}
.scrollable .bottom-link {
    padding-bottom: 2rem;
}
.changelog-subtitle {
    font-size: 1.1rem;
    padding-bottom: 0.7rem;
}
.changelog-banner {
    width: 100%;
    background-color: var(--accent-button-bg);
    max-height: 300px;
    margin-bottom: 2rem;
    float: left;
}
.changelog-img {
    object-fit: cover;
    width: inherit;
    height: inherit;
    max-height: inherit;
}
.nowrap {
    white-space: nowrap;
}
.no-top-padding {
    padding-top: 0!important;
}
.desc-padding {
    padding-bottom: 1.5rem;
}
#popup-subtitle {
    font-size: 1.1rem;
    padding-bottom: 1rem;
}
#popup-desc,
#desc-error,
#popup-info-desc {
    width: 100%;
    text-align: left;
    float: left;
    line-height: 1.7rem;
    user-select: text;
}
#popup-title {
    font-size: 1.5rem;
    margin-bottom: 0.5rem;
    line-height: 1.85em;
    display: flex;
    align-items: center;
}
#popup-footer {
    bottom: 0;
    position: fixed;
    margin-bottom: 1.5rem;
    background: var(--background);
    width: var(--without-padding);
}
.popup-footer-content {
    font-size: 0.8rem;
    line-height: 1.7rem;
    color: var(--accent-unhover-2);
    border-top: 0.05rem solid var(--accent-unhover-2);
    padding-top: 0.4rem;
}
#popup-above-title {
    color: var(--accent-unhover-2);
    font-size: 0.8rem;
}
#popup-content {
    overflow-x: hidden;
    overflow-y: auto;
    height: var(--without-padding);
    scrollbar-width: none;
}
.bullpadding {
    padding-left: 0.58rem;
}
#popup-header {
    position: relative;
    background: var(--background);
    z-index: 999;
    padding-top: 0.8rem;
}
#popup-content.with-footer {
    margin-bottom: 3rem;
}
#popup-close {
    cursor: pointer;
    float: right;
    right: 0;
    position: absolute;
}
.settings-category {
    padding-bottom: 1.2rem;
}
.separator {
    float: left;
}
.separator,
.category-title {
    width: 100%;
    color: var(--accent-unhover-2);
    border-bottom: 0.05rem solid var(--accent-unhover-2);
    padding-bottom: 0.25rem;
    margin-bottom: 1rem;
}
.category-title {
    text-align: left;
    line-height: 1.7rem;
}
.bottom-margin {
    margin-bottom: 1rem!important;
}
.top-margin {
    margin-top: 1rem!important;
}
.no-margin {
    margin: 0!important;
}
.checkbox {
    display: inline-flex;
    align-items: center;
    flex-direction: row;
    flex-wrap: nowrap;
    align-content: center;
    padding: 0.55rem 1rem 0.8rem 0.7rem;
    width: auto;
    margin: 0 0.5rem 0.5rem 0;
    background: var(--accent-button-bg);
}
.checkbox-label {
    line-height: 1.3rem;
}
.switch-container {
    width: 100%;
}
.subtitle {
    width: 100%;
    text-align: left;
    line-height: 1.7rem;
    padding-bottom: 0.4rem;
    color: var(--accent);
}
.small-padding .subtitle {
    margin-top: 0.5rem;
}
.explanation {
    margin-top: 1rem;
    width: 100%;
    font-size: 0.8rem;
    text-align: left;
    line-height: 1.3rem!important;
    color: var(--accent-unhover-2);
}
.subtext {
    color: var(--accent-unhover-2);
}
.switch {
    padding: 0.7rem;
    width: 100%;
    text-align: center;
    color: var(--accent);
    background: var(--accent-button-bg);
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}
.switch.space-right {
    margin-right: 1rem
}
.switch[data-enabled="true"] {
    color: var(--background);
    background: var(--accent);
    cursor: default;
    z-index: 999
}
.switches {
    display: flex;
    width: auto;
    flex-direction: row;
    flex-wrap: nowrap;
    overflow-x: scroll;
}
.autowidth {
    width: auto;
}
.bottom-space {
    margin-bottom: 2rem;
}
.text-to-copy {
    user-select: text;
    border: var(--border-15);
    padding: 1rem;
    overflow: auto;
}
#close-bottom {
    max-width: 2.8rem;
    margin-left: 1rem;
    background: var(--background);
    border: var(--border-15);
    color: var(--accent);
    padding: 0.3rem 0.75rem 0.5rem;
}
.popup-tab-content {
    display: none;
}
#popup-tabs {
    z-index: 999;
    bottom: 0;
    position: relative;
    width: 100%;
}
.popup-tabs {
    margin-top: 0.8rem;
}
.emoji {
    margin-right: 0.4rem;
}
.tooltip {
    position: absolute;
    margin-top: -6rem;
    margin-left: -0.5rem;
    line-height: 1.2;
    text-align: left;
    pointer-events: none;
    color: var(--accent-unhover-2)!important;
}
.button:active .tooltip {
    display: none;
}
.picker-image {
    object-fit: cover;
    width: inherit;
    height: inherit;
}
.picker-image-container {
    width: 8rem;
    height: 8rem;
    margin-bottom: 1rem;
    background-color: var(--accent-button-bg);
}
.picker-various-container {
    height: 20rem;
    width: 25rem;
    margin-bottom: 1rem;
    background-color: var(--accent-button-bg);
    position: relative;
}
#picker-holder {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    align-content: space-around;
}
#picker-holder.various {
    justify-content: left;
    flex-wrap: unset;
    overflow-x: scroll;
    gap: 2rem;
}
.imageBlock {
    height: 100%;
    width: 100%;
    position: absolute;
    z-index: 9999;
}
.picker-element-name {
    position: absolute;
    background: var(--background);
    color: var(--accent);
    padding: 0.3rem 0.6rem;
    font-size: 0.8rem;
    opacity: 0.7;
    margin: 0.4rem;
}
#popup-picker .explanation {
    margin-top: 0!important;
    margin-bottom: 1rem;
}
/* adapt the page according to screen size */
@media screen and (min-width: 2300px) {
    html {
        zoom: 130%;
    }
}
@media screen and (min-width: 3840px) {
    html {
        zoom: 180%;
    }
}
@media screen and (min-width: 5000px) {
    html {
        zoom: 300%;
    }
}
@media screen and (max-width: 1550px) {
    .popup.small {
        width: 25%
    }
    .popup {
        width: 35%;
    }
}
@media screen and (max-width: 1440px) {
    #cobalt-main-box {
        width: 65%;
    }
    .popup.small {
        width: 30%
    }
    .popup {
        width: 40%;
    }
}
/* ... */

